# bgccomplexbuilder

./: .gitignore  README.md  flow.md  pyproject.toml
complexbuilder/: complexfinder.py  draw_ipsae_ptm.py  findpdboligomers.py  inputbuilder.py  inputbuilder2.py  pdbinbgcclusters.py
complexbuilder/analysis/: excelplot.py  extract_hitcomplexes.py  ipsae.py  matrixmetrics.py  network.py  publish_html.py  publish_sheet.py  run_ipsae_yayoi.py  sthomologous_metricsplot.py  structhomologues.py
complexbuilder/common/: confidences.py  log.py  parser.py  plot.py  sequences.py
complexbuilder/polymerinfo/: rcsbpdb_polymerinfo.py
tests/: test_analysis.py  test_merging.py  test_network.py  test_polymerinfo.py  test_publishsheet.py  test_sequences.py
tests/testfiles/: MonBI_MonBII_model.cif  expected_testAB_model_10_10.pml  expected_testAB_model_10_10.txt  expected_testAB_model_10_10_byres.txt  test.fasta  testAB_confidences.json  testAB_model.cif  testAB_model_10_10_byres.txt  testAB_summary_confidences.json
