[project]
name = "complexbuilder"
version = "0.0.1"
description = "module to build and predict protein multimer with ColabFold"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.85",
    "matplotlib>=3.10.0",
    "networkx==3.5",
    "numpy>=2",
    "pandas",
    "requests",
    "rdkit>=2025.03.3",
    "scipy",
    "scikit-image",
    "loguru",
    "alphafold3-tools",
    "rcsb-api==1.1.3",
    "openpyxl",
    "seaborn>=0.13.2",
]

[tool.uv]
dev-dependencies = ["mypy", "notebook", "pytest", "ruff", "pyyaml"]

[tool.uv.sources]
alphafold3-tools = { git = "https://github.com/cddlab/alphafold3_tools.git" }

[tool.ruff]
indent-width = 4
line-length = 88 # Same as Black.
exclude = [".ruff_cache", ".ruff.toml", ".ruff.lock"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "F", # Flake8
    "B", # Black
    "I", # isort
    "E", # error
    "W", # warning
]
ignore = ["F401", "E501"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.isort]
combine-as-imports = true
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*Jupyter is migrating.*:DeprecationWarning",
]
addopts = "-vv --color=yes"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["complexbuilder"]
